[gd_scene load_steps=34 format=2]

[ext_resource path="res://assets/scripts/GameManager.gd" type="Script" id=1]
[ext_resource path="res://assets/images/metal_floor.png" type="Texture" id=2]
[ext_resource path="res://assets/scripts/Trail.gd" type="Script" id=3]
[ext_resource path="res://assets/scripts/TrailSprite.gd" type="Script" id=4]
[ext_resource path="res://assets/scripts/Player.gd" type="Script" id=5]
[ext_resource path="res://assets/images/spyder_idle/spyder_idle0.png" type="Texture" id=6]
[ext_resource path="res://assets/images/spyder_idle/spyder_idle1.png" type="Texture" id=7]
[ext_resource path="res://assets/images/spyder_idle/spyder_idle2.png" type="Texture" id=8]
[ext_resource path="res://assets/scripts/KillZone.gd" type="Script" id=9]
[ext_resource path="res://assets/scripts/KillZoneSprite.gd" type="Script" id=10]
[ext_resource path="res://assets/scripts/DragIndicator.gd" type="Script" id=11]
[ext_resource path="res://assets/images/go/go_0.png" type="Texture" id=12]
[ext_resource path="res://assets/images/go/go_1.png" type="Texture" id=13]
[ext_resource path="res://assets/images/go/go_2.png" type="Texture" id=14]
[ext_resource path="res://assets/images/go/go_3.png" type="Texture" id=15]
[ext_resource path="res://assets/images/go/go_4.png" type="Texture" id=16]
[ext_resource path="res://assets/images/go/go_5.png" type="Texture" id=17]
[ext_resource path="res://assets/images/ui/background.png" type="Texture" id=18]
[ext_resource path="res://assets/scripts/Overlay.gd" type="Script" id=19]
[ext_resource path="res://assets/fonts/8bitoperatorplus8regular.tres" type="DynamicFont" id=20]
[ext_resource path="res://assets/images/ui/healthbar_background.png" type="Texture" id=21]
[ext_resource path="res://assets/images/ui/healthbar_foreground.png" type="Texture" id=22]
[ext_resource path="res://assets/images/ui/menu_button/menu_button_normal.png" type="Texture" id=23]
[ext_resource path="res://assets/images/ui/menu_button/menu_button_pressed.png" type="Texture" id=24]
[ext_resource path="res://assets/images/ui/menu_button/menu_button_hover.png" type="Texture" id=25]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 160, 20 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 260 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 180, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 180, 10 )

[sub_resource type="TileSet" id=5]
0/name = "metal_floor.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 36, 36 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0

[sub_resource type="CircleShape2D" id=6]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 4.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "aiming",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "jumping",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="GameManager" type="Node2D"]
script = ExtResource( 1 )

[node name="NextLevelTrigger" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="NextLevelTrigger"]
position = Vector2( 160, 0 )
shape = SubResource( 1 )

[node name="Boundaries" type="StaticBody2D" parent="."]
editor/display_folded = true

[node name="LeftWall" type="CollisionShape2D" parent="Boundaries"]
position = Vector2( -10, 240 )
shape = SubResource( 2 )

[node name="RightWall" type="CollisionShape2D" parent="Boundaries"]
position = Vector2( 330, 240 )
shape = SubResource( 2 )

[node name="BottomWall" type="CollisionShape2D" parent="Boundaries"]
position = Vector2( 160, 490 )
shape = SubResource( 3 )

[node name="TopWall" type="CollisionShape2D" parent="Boundaries"]
position = Vector2( 160, 33.2774 )
shape = SubResource( 4 )

[node name="PlayArea" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="PlayArea"]
tile_set = SubResource( 5 )
cell_size = Vector2( 36, 36 )
format = 1

[node name="Trail" type="StaticBody2D" parent="PlayArea"]
editor/display_folded = true
collision_layer = 8
collision_mask = 0
script = ExtResource( 3 )

[node name="TrailSprite" type="Sprite" parent="PlayArea/Trail"]
script = ExtResource( 4 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PlayArea/Trail"]

[node name="EnemiesNode" type="Node2D" parent="PlayArea"]

[node name="Player" type="KinematicBody2D" parent="PlayArea"]
position = Vector2( 155, 229.9 )
collision_layer = 2
collision_mask = 5
script = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape2D" parent="PlayArea/Player"]
shape = SubResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="PlayArea/Player"]
scale = Vector2( 1.2, 1.2 )
frames = SubResource( 7 )
animation = "idle"
playing = true

[node name="KillZone" type="Area2D" parent="PlayArea"]
editor/display_folded = true
collision_layer = 0
collision_mask = 52
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="PlayArea/KillZone"]
script = ExtResource( 10 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PlayArea/KillZone"]

[node name="DragIndicator" type="Sprite" parent="PlayArea"]
script = ExtResource( 11 )

[node name="HUD" type="Node2D" parent="."]

[node name="GoSprite" type="AnimatedSprite" parent="HUD"]
visible = false
position = Vector2( 160, 90 )
frames = SubResource( 8 )
frame = 2
playing = true

[node name="Overlay" type="TextureRect" parent="HUD"]
editor/display_folded = true
margin_right = 320.0
margin_bottom = 46.0
texture = ExtResource( 18 )
script = ExtResource( 19 )

[node name="OverlayColumns" type="HBoxContainer" parent="HUD/Overlay"]
margin_right = 320.0
margin_bottom = 38.0

[node name="Titles" type="VBoxContainer" parent="HUD/Overlay/OverlayColumns"]
margin_right = 73.0
margin_bottom = 38.0

[node name="ScoreTitle" type="Label" parent="HUD/Overlay/OverlayColumns/Titles"]
margin_right = 73.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 20 )
custom_colors/font_color = Color( 0.568627, 0.568627, 0.568627, 1 )
text = "SCORE"

[node name="HealthTitle" type="Label" parent="HUD/Overlay/OverlayColumns/Titles"]
margin_top = 21.0
margin_right = 73.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 20 )
custom_colors/font_color = Color( 0.568627, 0.568627, 0.568627, 1 )
text = "HEALTH"

[node name="Business" type="VBoxContainer" parent="HUD/Overlay/OverlayColumns"]
margin_left = 77.0
margin_right = 231.0
margin_bottom = 38.0

[node name="Number" type="Label" parent="HUD/Overlay/OverlayColumns/Business"]
margin_right = 154.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 20 )
custom_colors/font_color = Color( 0.568627, 0.568627, 0.568627, 1 )
text = "0"
align = 2

[node name="HealthBar" type="TextureRect" parent="HUD/Overlay/OverlayColumns/Business"]
margin_top = 21.0
margin_right = 154.0
margin_bottom = 35.0
texture = ExtResource( 21 )

[node name="HealthGauge" type="TextureProgress" parent="HUD/Overlay/OverlayColumns/Business/HealthBar"]
margin_left = 2.0
margin_top = 2.27739
margin_right = 152.0
margin_bottom = 12.2774
value = 100.0
texture_progress = ExtResource( 22 )

[node name="MenuButtonBackground" type="NinePatchRect" parent="HUD/Overlay/OverlayColumns"]
margin_left = 235.0
margin_right = 320.0
margin_bottom = 38.0
size_flags_horizontal = 3

[node name="MenuButton" type="TextureButton" parent="HUD/Overlay/OverlayColumns/MenuButtonBackground"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -33.0
margin_top = -16.5
margin_bottom = 16.5
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 24 )
texture_hover = ExtResource( 25 )

[node name="PauseMenu" type="VBoxContainer" parent="HUD"]
editor/display_folded = true
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 20.0
margin_top = 110.0
margin_right = 300.0
margin_bottom = 370.0
custom_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="HUD/PauseMenu"]
margin_top = 16.0
margin_right = 280.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 20 )
text = "PAUSED"
align = 1
valign = 1

[node name="Continue" type="Button" parent="HUD/PauseMenu"]
margin_top = 53.0
margin_right = 280.0
margin_bottom = 83.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 20 )
shortcut_in_tooltip = false
text = "CONTINUE"

[node name="Restart" type="Button" parent="HUD/PauseMenu"]
margin_top = 103.0
margin_right = 280.0
margin_bottom = 133.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 20 )
shortcut_in_tooltip = false
text = "RESTART"

[node name="QuitToMenu" type="Button" parent="HUD/PauseMenu"]
margin_top = 153.0
margin_right = 280.0
margin_bottom = 183.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 20 )
shortcut_in_tooltip = false
text = "QUIT TO MENU"

[node name="Invert" type="CheckButton" parent="HUD/PauseMenu"]
margin_top = 203.0
margin_right = 280.0
margin_bottom = 243.0
custom_fonts/font = ExtResource( 20 )
shortcut_in_tooltip = false
text = "INVERT MOVEMENT"

[node name="DeathMenu" type="VBoxContainer" parent="HUD"]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 20.0
margin_top = 140.0
margin_right = 300.0
margin_bottom = 343.0
custom_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="HUD/DeathMenu"]
margin_top = 18.0
margin_right = 280.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 20 )
text = "GAME OVER"
align = 1
valign = 1

[node name="Restart" type="Button" parent="HUD/DeathMenu"]
margin_top = 55.0
margin_right = 280.0
margin_bottom = 85.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 20 )
shortcut_in_tooltip = false
text = "RESTART"

[node name="TwitterShare" type="Button" parent="HUD/DeathMenu"]
margin_top = 105.0
margin_right = 280.0
margin_bottom = 135.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 20 )
text = "SHARE ON TWITTER"

[node name="QuitToMenu" type="Button" parent="HUD/DeathMenu"]
margin_top = 155.0
margin_right = 280.0
margin_bottom = 185.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 20 )
shortcut_in_tooltip = false
text = "QUIT TO MENU"
